--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@ document.onselectstart = new Function("return false");
                                     
                                     <div class="event">
                                         <h3>Jan 2021 - Current</h3>
-                                        <h4>Web Developer</h4>
+                                        <h4>Sr. Web Developer</h4>
                                         <h5>Moca Test Inc.</h5>
                                     </div>
                                     
