--- a/index.html
+++ b/index.html
@@ -881,7 +881,7 @@ Development</h4>
                                 </div>
     
                                 <div class="media-cell-desc">
-                                    <h3>Toppscholars</h3>
+                                    <h3>Feed the need</h3>
                                     <!-- <p class="category">a vcard theme</p> -->
                                 </div>
     
