update work history

--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@ document.onselectstart = new Function("return false");
                                     </div>
                                     
                                     <div class="event">
-                                        <h3>Jan 2021 - Current</h3>
+                                        <h3>Jan 2021 - Sep 2023</h3>
                                         <h4>Sr. Web Developer</h4>
                                         <h5>Moca Test Inc.</h5>
                                     </div>
