--- a/index.html
+++ b/index.html
@@ -875,7 +875,7 @@ Development</h4>
                             <div class="media-cell  reactjs url hentry">
     
                                 <div class="media-box">
-                                    <img src="httpss://res.cloudinary.com/rajith/image/upload/v1629331027/feedtheneed_yanptk.jpg" alt="portfolio-post">
+                                    <img src="https://res.cloudinary.com/rajith/image/upload/v1629331027/feedtheneed_yanptk.jpg" alt="portfolio-post">
                                     <div class="mask"></div>
                                     <a href="httpss://feed-the-need.s3.ca-central-1.amazonaws.com/index.html#/" target="_blank"></a>
                                 </div>
