updated moca work description

--- a/index.html
+++ b/index.html
@@ -561,6 +561,7 @@ document.onselectstart = new Function("return false");
                                         <h3>Jan 2021 - Sep 2023</h3>
                                         <h4>Sr. Web Developer</h4>
                                         <h5>Moca Test Inc.</h5>
+					<p>At MoCA, I skillfully developed a dynamic ReactJS dashboard based on provided designs, while also enhancing the WordPress interface. My expertise also extended to integrating .NET-based APIs and ensuring reliable PayPal payment transactions, enhancing user experiences throughout.</p>
                                     </div>
                                     
                                     <div class="event">
