--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
    <head>
       <meta charset="utf-8" />
       <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
-      <title id="title">Web Developer - Resume</title>
+      <title id="title">Software Developer | Frontend Developer</title>
       <!-- FAV and TOUCH ICONS -->
       <link rel="shortcut icon" href="images/ico/favicon1.ico">
       <link rel="apple-touch-icon" href="images/ico/apple-touch-icon.png"/>
