--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                   </h1>
                   <!-- page-title -->
                   <blockquote>
-                     I am a software developer based in Brampton, ON, Canada. This website gives a briefing about my self, my interest, my specializations and my work.
+                     I am a Software Developer based in Brampton, ON, Canada. This website gives a briefing about my self, my interest, my specializations and my work.
                      <!-- <cite>Ethan Marcotte</cite> -->
                   </blockquote>
                   <!-- SERVICES -->
