--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
             <div class="header-bottom">
                <!-- SOCIAL -->
                <ul class="social">
-                  <li><a class="linkedin" href="httpss://www.linkedin.com/in/rajith-venu-gopal-3aab8979" target="_blank"></a></li>
-                  <li><a class="skype" href="httpss://join.skype.com/invite/lam0Wjwyb3T7" target="_blank"></a></a></li>
-                  <li><a class="instagram" href="httpss://www.instagram.com/rajith_27/" target="_blank"></a></li>
+                  <li><a class="linkedin" href="https://www.linkedin.com/in/rajith-venu-gopal-3aab8979" target="_blank"></a></li>
+                  <li><a class="skype" href="https://join.skype.com/invite/lam0Wjwyb3T7" target="_blank"></a></a></li>
+                  <li><a class="instagram" href="https://www.instagram.com/rajith_27/" target="_blank"></a></li>
                </ul>
                <!-- SOCIAL -->
                <!-- copy-text -->
@@ -580,7 +580,7 @@
          <div class="media-box">
          <img src="https://res.cloudinary.com/rajith/image/upload/v1629331027/feedtheneed_yanptk.jpg" alt="portfolio-post">
          <div class="mask"></div>
-         <a href="httpss://feed-the-need.s3.ca-central-1.amazonaws.com/index.html#/" target="_blank"></a>
+         <a href="https://feed-the-need.s3.ca-central-1.amazonaws.com/index.html#/" target="_blank"></a>
          </div>
          <div class="media-cell-desc">
          <h3>Feed the need</h3>
@@ -593,7 +593,7 @@
          <div class="media-box">
          <img src="images/portfolio/toppscholars.jpg" alt="portfolio-post">
          <div class="mask"></div>
-         <a href="httpss://www.toppscholars.com/" target="_blank"></a>
+         <a href="https://www.toppscholars.com/" target="_blank"></a>
          </div>
          <div class="media-cell-desc">
          <h3>Toppscholars</h3>
@@ -606,7 +606,7 @@
          <div class="media-box">
          <img src="images/portfolio/nativecircle.jpg" alt="portfolio-post">
          <div class="mask"></div>
-         <a href="httpss://nativecircle.in/" target="_blank"></a>
+         <a href="https://nativecircle.in/" target="_blank"></a>
          </div>
          <div class="media-cell-desc">
          <h3>NativeCircle</h3>
@@ -620,7 +620,7 @@
          <img src="images/portfolio/Enquero.jpg" alt="portfolio-post">
          <div class="mask"></div>
          <!-- lightbox - video -->
-         <a href="httpss://enquero.com/" target="_blank"></a>
+         <a href="https://enquero.com/" target="_blank"></a>
          <!-- lightbox - video -->
          </div>
          <div class="media-cell-desc">
@@ -635,7 +635,7 @@
          <img src="images/portfolio/neolacta.jpg" alt="portfolio-post">
          <div class="mask"></div>
          <!-- lightbox - image -->
-         <a href="httpss://neolacta.com/" target="_blank"></a>
+         <a href="https://neolacta.com/" target="_blank"></a>
          <!-- lightbox - image -->
          </div>
          <div class="media-cell-desc">
@@ -649,7 +649,7 @@
          <div class="media-box">
          <img src="images/portfolio/savoll.jpg" alt="portfolio-post">
          <div class="mask"></div>
-         <a href="httpss://saveall-101a8.firebaseapp.com" target="_blank"></a>
+         <a href="https://saveall-101a8.firebaseapp.com" target="_blank"></a>
          <!-- lightbox - soundcloud -->
          </div>
          <div class="media-cell-desc">
@@ -678,7 +678,7 @@
          <div class="media-box">
          <img src="images/portfolio/cloudnine.jpg" alt="portfolio-post">
          <div class="mask"></div>
-         <a href="httpss://www.cloudninefertility.com/" target="_blank"></a>
+         <a href="https://www.cloudninefertility.com/" target="_blank"></a>
          </div>
          <div class="media-cell-desc">
          <h3>Cloudnine Fertility</h3>
@@ -691,7 +691,7 @@
          <div class="media-box">
          <img src="images/portfolio/righthome.jpg" alt="portfolio-post">
          <div class="mask"></div>
-         <a href="httpss://righthome.in/" target="_blank"></a>
+         <a href="https://righthome.in/" target="_blank"></a>
          </div>
          <div class="media-cell-desc">
          <h3>Right Home</h3>
@@ -779,9 +779,9 @@
          <!-- section-title -->
          <!-- SOCIAL -->
          <ul class="social">
-         <li><a class="linkedin" href="httpss://www.linkedin.com/in/rajith-venu-gopal-3aab8979" target="_blank"></a></li>
-         <li><a class="skype" href="httpss://join.skype.com/invite/lam0Wjwyb3T7" target="_blank"></a></a></li>
-         <li><a class="instagram" href="httpss://www.instagram.com/rajith_27/" target="_blank"></a></li>
+         <li><a class="linkedin" href="https://www.linkedin.com/in/rajith-venu-gopal-3aab8979" target="_blank"></a></li>
+         <li><a class="skype" href="https://join.skype.com/invite/lam0Wjwyb3T7" target="_blank"></a></a></li>
+         <li><a class="instagram" href="https://www.instagram.com/rajith_27/" target="_blank"></a></li>
  
          </ul>
          <!-- SOCIAL -->
