--- a/index.html
+++ b/index.html
@@ -578,12 +578,12 @@
          <!-- portfolio-item -->
          <div class="media-cell  reactjs url hentry">
          <div class="media-box">
-         <img src="https://res.cloudinary.com/rajith/image/upload/v1629331027/feedtheneed_yanptk.jpg" alt="portfolio-post">
+         <img src="https://res.cloudinary.com/rajith/image/upload/v1711387437/moca_jeo6nl.jpg" alt="portfolio-post">
          <div class="mask"></div>
-         <a href="https://feed-the-need.s3.ca-central-1.amazonaws.com/index.html#/" target="_blank"></a>
+         <a href="https://mocacognition.com/" target="_blank"></a>
          </div>
          <div class="media-cell-desc">
-         <h3>Feed the need</h3>
+         <h3>MoCA Cognition</h3>
          <!-- <p class="category">a vcard theme</p> -->
          </div>
          </div>
@@ -686,19 +686,6 @@
          </div>
          </div>
          <!-- portfolio-item - custom url -->
-         <!-- portfolio-item -->
-         <div class="media-cell url hentry wordpress">
-         <div class="media-box">
-         <img src="images/portfolio/righthome.jpg" alt="portfolio-post">
-         <div class="mask"></div>
-         <a href="https://righthome.in/" target="_blank"></a>
-         </div>
-         <div class="media-cell-desc">
-         <h3>Right Home</h3>
-         <!-- <p class="category">an illustration work</p> -->
-         </div>
-         </div>
-         <!-- portfolio-item -->
          </div>
          <!-- PORTFOLIO -->
          </div>
