--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                   </h1>
                   <!-- page-title -->
                   <blockquote>
-                     I am a Software Developer based in Brampton, ON, Canada. This website gives a briefing about my self, my interest, my specializations and my work.
+                     I am a Software Developer based in Toronto, ON, Canada. This website gives a briefing about my self, my interest, my specializations and my work.
                      <!-- <cite>Ethan Marcotte</cite> -->
                   </blockquote>
                   <!-- SERVICES -->
@@ -720,7 +720,7 @@
          <div class="fun-fact">
          <i class="pe-7s-map-marker"></i>
          <!--<img src="images/site/icon-03.png" alt="image"/>-->
-         <h4>based in Brampton, ON, Canada</h4>
+         <h4>based in Toronto, ON, Canada</h4>
          </div>
          <!-- fun-fact -->
          </div>
