--- a/index.html
+++ b/index.html
@@ -415,6 +415,11 @@
          </p>
          </div>
          <div class="event">
+         <h3>Mar 2024 - Oct 2024</h3>
+         <h4>Software Developer</h4>
+         <p>With over 6 years of experience in web development, I specialize in creating responsive, user-friendly websites and web applications. My expertise includes front-end technologies such as HTML5, CSS3, JavaScript, React, and jQuery, as well as back-end technologies like PHP and MySQL. I’ve successfully developed and customized WordPress websites, integrated third-party APIs, and optimized websites for performance and SEO. I’m committed to delivering high-quality, functional solutions that meet client needs and deadlines.</p>
+         </div>
+         <div class="event">
          <h3>Jan 2021 - Sep 2023</h3>
          <h4>Sr. Web Developer</h4>
          <h5>Moca Test Inc.</h5>
