--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                <!-- SOCIAL -->
                <ul class="social">
                   <li><a class="linkedin" href="https://www.linkedin.com/in/rajith-venu-gopal-3aab8979" target="_blank"></a></li>
-                  <li><a class="skype" href="https://join.skype.com/invite/lam0Wjwyb3T7" target="_blank"></a></a></li>
+                  <li><a class="github" href="https://github.com/rajith19" target="_blank"></a></a></li>
                   <li><a class="instagram" href="https://www.instagram.com/rajith_27/" target="_blank"></a></li>
                </ul>
                <!-- SOCIAL -->
@@ -772,7 +772,7 @@
          <!-- SOCIAL -->
          <ul class="social">
          <li><a class="linkedin" href="https://www.linkedin.com/in/rajith-venu-gopal-3aab8979" target="_blank"></a></li>
-         <li><a class="skype" href="https://join.skype.com/invite/lam0Wjwyb3T7" target="_blank"></a></a></li>
+         <li><a class="github" href="https://github.com/rajith19" target="_blank"></a></a></li>
          <li><a class="instagram" href="https://www.instagram.com/rajith_27/" target="_blank"></a></li>
  
          </ul>
